--- a/src/views/partials/nav.pug
+++ b/src/views/partials/nav.pug
@@ -1,7 +1,7 @@
 nav.navbar.navbar-expand-lg.navbar-light.bg-light.centerText
   .container
     img.logoNav(src="/img/logo_cps.png", alt="logoNavBar")
-    a.navbar-brand(href='/inicio') Sustentabilidad
+    a.navbar-brand(href='/inicio') &nbsp; Gesti&oacute; Sustentable
     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarNavDropdown.collapse.navbar-collapse.ml-auto
