--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -9,4 +9,13 @@ html(lang="en")
     body 
     include partials/nav.pug
 
+    .container-sm
+            .row.containerText 
+                h1 
+                    strong 
+                        | ACERCA DE
+                h4
+                    | Con con fundamento en el Plan de Desarrollo Institucional del IPN vigente, expresado a trav&eacute;s de los proyectos del Eje Transversal de “Responsabilidad social y sustentabilidad”, y atendiendo los requerimientos de la Secretar&iacute;a de Administraci&oacute;n a cada Dependencia Polit&eacute;cnica, el presente material prev&eacute; orientar a cada dependencia polit&eacute;cnica en la integraci&oacute;n de un Plan de gesti&oacute;n sustentable, conformado por un conjunto de acciones espec&iacute;ficas y medidas orientadas a mejorar el desempeño ambiental de cada DP, tales como uso eficiente del agua, ahorro, de energ&iacute;a el&eacute;ctrica y conservaci&oacute;n del patrimonio natural bajo resguardo de las instalaciones polit&eacute;cnicas entre otros, que habr&acute; de ser una herramienta de cada dependencia polit&acute;cnica para atender las premisas establecidas en el art&iacute;culo 17bis de la LGEEPA.
+
+
     include partials/footer.pug
