--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -49,8 +49,8 @@ nav#header.navbar.bg-dark.navbar-dark.navbar-expand-sm.navbar-gob(data-v-27b47ae
                 a.ipnLogo-enlace(href='https://www.ipn.mx')
                     img.plecaGob(src='img/logo_ipn.svg' alt='')
                     p.d-inline-block.tituloLogo
-                        | Instituto Politécnico Nacional 
+                        | Instituto Polit&eacute;cnico Nacional 
                         br
-                        span.sm "La Técnica al Servicio de la Patria"
+                        span.sm "La T&eacute;cnica al Servicio de la Patria"
 
 
