--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -216,9 +216,20 @@ html(lang="en")
             .row.containerText 
                 h5
                     | Con con fundamento en el Plan de Desarrollo Institucional del IPN vigente, expresado a trav&eacute;s de los proyectos del Eje Transversal de “Responsabilidad social y sustentabilidad”, y atendiendo los requerimientos de la Secretar&iacute;a de Administraci&oacute;n a cada Dependencia Polit&eacute;cnica, el presente material prev&eacute; orientar a cada dependencia polit&eacute;cnica en la integraci&oacute;n de un Plan de gesti&oacute;n sustentable, conformado por un conjunto de acciones espec&iacute;ficas y medidas orientadas a mejorar el desempeño ambiental de cada DP, tales como uso eficiente del agua, ahorro, de energ&iacute;a el&eacute;ctrica y conservaci&oacute;n del patrimonio natural bajo resguardo de las instalaciones polit&eacute;cnicas entre otros, que habr&acute; de ser una herramienta de cada dependencia polit&acute;cnica para atender las premisas establecidas en el art&iacute;culo 17bis de la LGEEPA.
-
-
-
+            .row.containerText 
+                h2
+                    strong
+                        | Otros enlaces &uacute;tiles
+            h3 
+                a(href="hhtp://www.ipn.mx/sustentabilidad/") Coordinaci&oacute;n Polit&eacute;cnica para la Sustentabilidad      
+                br
+                a(href="http://www.diputados.gob.mx/LeyesBiblio/pdf/148_180121.pdf") Ley general de equilibrio ecol&oacute;gico y protecci&oacute;n al ambiente      
+                br
+                a(href="http://www.diputados.gob.mx/LeyesBiblio/pdf/LGCC_061120.pdf") Ley general de cambio clim&aacute;tico      
+                br
+                a(href="http://www.diputados.gob.mx/LeyesBiblio/pdf/16_060120.pdf") Ley general de aguas nacionales     
+                br
+                a(href="https://www.senado.gob.mx/comisiones/energia/docs/marco_LASE.pdf") Ley para el aprovechamiento sustentable de la energ&iacute;a     
 
 // footer
 include partials/footer.pug
